# Machin-Project2

./: .gitignore  CMakeLists.txt  README.md
project/core/decks/: unshuffled_deck.txt
project/core/include/: board.h  gameState.h  test.h
project/core/src/: board.c  board.h  card.c  card.h  commandLine.c  commandLine.h  deck.c  deck.h  easy_deck.txt  file_loader.c  file_loader.h  game.c  game.h  gameState.c  gameState.h  main.c  node.h  readfile  redo_undo.c  somefile.txt  test.c  test.h
